[package]
name = "floodsub-example"
version = "0.0.1"
authors = ["Rust Libp2p <libp2p@libp2p.io>"]

[dependencies]
bytes = "0.4"
futures = "0.1"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-current-thread = "0.1"
tokio-stdin = "0.1"
env_logger = "0.5.4"
rand = "0.4"
libp2p = { git = "https://github.com/libp2p/rust-libp2p" }
# To use local rust-libp2p source
#libp2p = { path = "../rust-libp2p" }
